crates/verdant-core/tests/compile_fail/local_not_serializable.stderr
error[E0277]: the trait bound `verdant_core::sovereignty::Local<SensorReading>: serde::Serialize` is not satisfied
  --> tests/compile_fail/local_not_serializable.rs:15:40
   |
15 |     let _bytes = postcard::to_allocvec(&local).unwrap();
   |                  --------------------- ^^^^^^ the trait `serde_core::ser::Serialize` is not implemented for `verdant_core::sovereignty::Local<SensorReading>`
   |                  |
   |                  required by a bound introduced by this call
   |
   = note: for local types consider adding `#[derive(serde::Serialize)]` to your `verdant_core::sovereignty::Local<SensorReading>` type
   = note: for types from other crates check whether the crate offers a `serde` feature flag
   = help: the following other types implement trait `serde_core::ser::Serialize`:
             &'a T
             &'a mut T
             ()
             (T,)
             (T0, T1)
             (T0, T1, T2)
             (T0, T1, T2, T3)
             (T0, T1, T2, T3, T4)
           and $N others
note: required by a bound in `to_allocvec`
  --> $CARGO/postcard-$VERSION/src/ser/mod.rs
   |
   | pub fn to_allocvec<T>(value: &T) -> Result<alloc::vec::Vec<u8>>
   |        ----------- required by a bound in this function
   | where
   |     T: Serialize + ?Sized,
   |        ^^^^^^^^^ required by this bound in `to_allocvec`
